@@ -1,5 +1,27 @@
 # OS-specific installation instructions for yle-dl
 
+## Debian 10 (Buster)/Ubuntu 17.10
+
+```
+sudo apt-get install rtmpdump wget ffmpeg python-dev python-setuptools \
+    python-pip python-pycryptodome python-requests python-lxml python-socks \
+    php-cli php-curl php-xml php-bcmath
+sudo -H pip install --upgrade yle-dl
+```
+
+
+### Installing from source code on Debian 10/Ubuntu 17.10
+
+```
+sudo apt-get install git rtmpdump wget ffmpeg python-dev python-setuptools \
+    python-pycryptodome python-requests python-lxml python-socks \
+    php-cli php-curl php-xml php-bcmath
+git clone https://github.com/aajanki/yle-dl.git
+cd yle-dl
+sudo -H python setup.py install
+```
+
+
 ## Debian 9 (Stretch)/Ubuntu 16.04
 
 ```
