@@ -6,6 +6,8 @@ xx xxx 2018, Version 2.32
 
 - Fix parsing of non-ASCII command line arguments on Python 2
 - The mcrypt PHP extension is not required anymore
+- Prefer PyCryptodome instead of pycrypto. Pycrypto works still for
+  now but I may drop the support in some future version.
 
 10 Feb 2018, Version 2.31
 
